make my profile prettier

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="card-white text-center" id="intro">
       <h1>Hi, my name is Timothy! 👋</h1>
-        <img src="/images/image.jpg" id="profile" width="100" height="100" alt="Profile picture">
+        <img src="./images/image.jpg" id="profile" width="100" height="100" alt="Profile picture">
         <p>
           I am a Belgo-American self-taught photographer 📷
           <br>Passionate about the travels, the outdoors, the people and their culture 🌎
